# AuthMicroService

./: main.py  pyproject.toml
DB/: core.py
DB/Orms/: UserOrm.py
DB/Repos/: UserRepo.py
Roouters/: AuthRouter.py
Schemas/: SignUp.py
migrations/: env.py
migrations/versions/: 61a1be9b9121_.py
